--- a/ctf_ethiopia/public/home.html
+++ b/ctf_ethiopia/public/home.html
@@ -15,5 +15,15 @@
             <a href="">contact</a>
         </nav>
     </div>
+    <div class="main">
+        <img src="" alt="">
+        <h2>Welcome to Ctf Ethiopia</h2>
+        <div class="listctf">
+
+        </div>
+    </div>
+    <div class="footer">
+        
+    </div>
 </body>
 </html>
