--- a/ctf_ethiopia/public/signup.html
+++ b/ctf_ethiopia/public/signup.html
@@ -25,20 +25,41 @@
         </div>
         <div class="form">
             <form action="" method="post">
-                <ul>
-                    <li>
-                        username <input type="text" name="username" id="" required>
-                    </li>
-                    <li>
-                        email <input type="email" name="email" id="" required>
-                    </li>
-                    <li>
-                        password <input type="password" name="password" id="" required>
-                    </li>
-                    <li>
-                        re-password <input type="password" name="re_password" id="" required>
-                    </li>
-                </ul>
+                    <table>
+                        <tr>
+                            <td>
+                                username 
+                            </td>
+                            <td>
+                                <input type="text" name="username" id="" required>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                email
+                            </td>
+                            <td>
+                                <input type="email" name="email" id="" required>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                password
+                            </td>
+                            <td>
+                                <input type="password" name="password" id="" required>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                re-password 
+                            </td>
+                            <td>
+                                <input type="password" name="re_password" id="" required>
+                            </td>
+                        </tr> 
+                    </table>
+                        
                 <input type="submit" value="enter">
                 <input type="reset" value="reset">
             </form>
