--- a/ctf_ethiopia/public/login.html
+++ b/ctf_ethiopia/public/login.html
@@ -6,7 +6,7 @@
     <title>login</title>
 </head>
 <body>
-    <form action="" method="post">
+    <form action="/login" method="post">
         <p>
             username <input type="text" name="username" id="" required>
         </p>
